--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "museum",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "axios": "^0.24.0",
+    "next": "^12.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-query": "^3.34.8",
+    "react-use-websocket": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.33",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
+    "@svgr/webpack": "^6.2.0",
+    "@types/aos": "^3.0.4",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.13",
+    "typescript": "^4.5.4"
   }
 }
