--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^0.24.0",
     "next": "^12.0.8",
     "react": "17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
     "react-query": "^3.34.8",
     "react-use-websocket": "^3.0.0"
